# SignGPT-Crew-Server-Vercel

./: Dockerfile  README.md  crew.py  main.py  pyproject.toml  requirements.txt  start_server.py  vercel.json
api/: app.py  crew.py
api/config/: tasks.yaml
config/: agents.yaml
